I REGRET MULTI-TENANCY IT IS NO MORE... Also debating on if I still need a sql db, I'm sure both answers are correct
