# YStreamUtils/Core/Entities/ITenantEntity.cs
@@ -1,11 +1,0 @@
-﻿namespace YStreamUtils.Core.Entities;
-
-public interface ITenantEntity
-{
-    public string TenantId { get; set; }
-    
-    public void SetTenantId(string tenantId)
-    {
-        TenantId = tenantId;
-    }
-}
