# YStreamUtils/Core/Entities/OAuthConfig.cs
@@ -1,14 +1,16 @@
 ﻿using System.ComponentModel.DataAnnotations;
-using System.Text.Json.Serialization;
 using YStreamUtils.Core.Models;
 
 namespace YStreamUtils.Core.Entities;
 
-public class OAuthConfig : ITenantEntity
+public class OAuthConfig
 {
     [Key]
     public Platform Platform { get; set; } = Platform.YouTube;
+
+    [Required]
     public string ClientId { get; set; } = string.Empty;
+
+    [Required]
     public string ClientSecret { get; set; } = string.Empty;
-    public string TenantId { get; set; } = string.Empty;
 }
