# YStreamUtils/Core/Entities/UserScript.cs
@@ -4,12 +4,11 @@ using YStreamUtils.Core.Models;
 
 namespace YStreamUtils.Core.Entities;
 
-public class UserScript : ITenantEntity
+public class UserScript
 {
     [Key]
     public string ScriptId { get; set; } = string.Empty;
     public EventKey Topic { get; set; }
     public string Source { get; set; } = string.Empty;
     public bool IsEnabled { get; set; }
-    public string TenantId { get; set; }  = string.Empty;
 }
